set up sanctum authentication in Swagger UI by security={{sanctum:{}}}
